# Syngit

./: .gitignore  README.md  config.go  go.mod  go.sum  main.go  main.py  pyproject.toml  syngit.json  syngit.py  syngit.toml
clients/: API.go  api.go  clients.go  codeberg.go  github.go  gitlab.go
config/: config.go
gitops/: clone.go  gitops.go  mirror.go  sync.go
syngit/: config.py  main.py  sync.py
tests/: test_syngit.py
